# pipekit

./: .gitignore  README.md  pyproject.toml
docs/: audit.md  batch.md  bucket.md  cache.md  checkpoint.md  coalesce.md  compare.md  context.md  enrich.md  fanout.md  fillna.md  flag.md  flatten.md  format.md  hooks.md  interpolate.md  join.md  normalize.md  parallel.md  pivot.md  rename.md  sample.md  schema.md  score.md  select.md  sort.md  tap.md  throttle.md  typecast.md  validators.md  window.md
examples/: audit_pipeline.py  batch_pipeline.py  bucket_pipeline.py  cache_pipeline.py  checkpoint_pipeline.py  coalesce_pipeline.py  compare_pipeline.py  hooks_pipeline.py  normalize_pipeline.py  pivot_pipeline.py  sample_pipeline.py  schema_pipeline.py  typecast_pipeline.py  validation_pipeline.py
pipekit/: __init__.py  aggregate.py  audit.py  batch.py  bucket.py  cache.py  checkpoint.py  coalesce.py  compare.py  context.py  dedupe.py  diff.py  enrich.py  expression.py  fanout.py  fillna.py  flag.py  flatten.py  format.py  hooks.py  interpolate.py  io.py  join.py  limit.py  mask.py  normalize.py  parallel.py  pipeline.py  pivot.py  rename.py  retry.py  sample.py  schema.py  score.py  select.py  sort.py  splitter.py  tap.py  throttle.py  transforms.py  (+4 more)
tests/: test_aggregate.py  test_audit.py  test_batch.py  test_bucket.py  test_cache.py  test_checkpoint.py  test_coalesce.py  test_compare.py  test_context.py  test_dedupe.py  test_diff.py  test_enrich.py  test_fanout.py  test_fillna.py  test_flag.py  test_flatten.py  test_format.py  test_hooks.py  test_interpolate.py  (+23 more)
